--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.0.0
+* removed logging statements taking a lazy string as a parameter
+* simpler log function
+0.6.0
+* exposed string_of_level
+* added level_of_string
 0.5.0
 * Make printf-like functions lazy
 * more tests
